simplyfy and make nice

--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
     <!-- Logo bar -->
     <header>
       <div class="logo__container">
-        <img
-          class="logo__img"
-          alt="VanMoof Logo SVG"
-          src="assets/svgs/40192-VanMoof-logo-black-d62636.svg"
-        />
+        <p class="logo__text">antala</p>
       </div>
     </header>
 
@@ -85,11 +81,10 @@
 
         </sl-carousel>
 
-        <div class="header__teaser padding20">
+        <div class="header__teaser">
           <p class="header__teaser-text">
-            Erobere mit dem VanMoof T8 die Welt der Dekoration. 
-            Perfekt für einzigartige Akzente und inspirierende Atmosphären. 
-            Hol dir den T8 und verleihe deinem Raum einen Hauch von natürlicher Schönheit.
+            Nicht gesucht, aber gefunden. Mit unterschiedlichen Stärken und 
+            einem (meistens) kühlen Kopf meistern wir jede Streaming-Aufgabe.
           </p>
         </div>
       </section>
@@ -102,69 +97,6 @@
             <h3 class="slogan__text">Bescheidene Perfektion.</h3>
           </div>
           <div class="slogan__frame"></div>
-        </div>
-      </section>
-
-
-      <!-- Specialty -->
-      <section class="specialty__section">
-        <div class="specialty__container">
-          <div class="specialty__layout">
-            <div
-              class="specialty__text-container"
-              id="specialty__text-container"
-            >
-              <h2 class="specialty__heading">Ökologische Ästhetik</h2>
-              <p class="specialty__title">
-                Vergiss andere Dekoartikel. Nein, wirklich.
-              </p>
-
-              <div class="specialty__highlight">
-                <span class="specialty__text">
-                  Holz aus niederländischen Produktionsabfällen - wertvolle Ressourcen wiederverwendet, Abfall reduziert.
-                </span>
-              </div>
-
-              <div class="specialty__highlight">
-                <span class="specialty__text">
-                  Das Ergebnis? Jeder T8 ist ein wahres Unikat, 
-                  da sich die Holzreste in ihrer Musterung und Beschaffenheit unterscheiden. 
-                </span>
-              </div>
-            </div>
-
-            <div
-              class="specialty__media-container media-container__img"
-              id="media-container__img"
-            >
-              <img
-                alt="T8 - top view"
-                src="assets/imgs/t8_above.jpg"
-                class="specialty__media-img"
-              />
-            </div>
-
-            <div
-              class="specialty__media-container media-container__vid"
-              id="media-container__vid"
-            >
-              <img
-                alt="T8 - turned towards left"
-                src="assets/anims/gif-1.gif"
-                class="specialty__media-vid"
-              />
-              <p class="specialty__media-text">
-                Der T8 - ein Meisterwerk der ästhetischen Nachhaltigkeit und der individuellen Handwerkskunst.
-              </p>
-            </div>
-          </div>
-
-          <!-- min-width 768px parallax -->
-          <div class="break__container">
-            <div class="break__frame">
-              <p class="break__text">Noch nachhaltiger geht wirklich nicht.</p>
-            </div>
-          </div>
         </div>
       </section>
 
@@ -221,10 +153,8 @@
             <div class="footer__newsletter">
               <p class="footer__newsletter-title">Bleib auf dem Laufenden</p>
               <p class="footer__newsletter-text">
-                Abonniere unseren Newsletter für Updates per Email
+                Abonniere unseren Newsletter für unnötige Infos per Email
               </p>
-
-            
 
             <div class="footer__arrow-wrapper">
               <a href="#" class="footer__arrow-link" aria-label="scroll to top">
