--- a/index.html
+++ b/index.html
@@ -74,8 +74,17 @@
           </sl-carousel-item>
 
           <sl-carousel-item>
-            <iframe width="420" height="315"
-              src="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <div id="ytplayer"></div>
+          </sl-carousel-item>
+
+          <sl-carousel-item>
+            <iframe type="text/html" width="560" height="315" 
+              src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=75km32Z96ctEMcmA" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen
+              referrerpolicy="origin-when-cross-origin">
             </iframe>
           </sl-carousel-item>
 
